--- a/bakery-rwd-finished.css
+++ b/bakery-rwd-finished.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+body { 
+  background-image: url('Mountainpic.jpeg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 1800px 1500px;
+  }
 html {
   box-sizing: border-box;
 }
