--- a/bakery-rwd-finished.css
+++ b/bakery-rwd-finished.css
@@ -33,7 +33,7 @@ a {
 /* header styles */
 header {
   color: white;
-  background:  url(images/croissants_banner.jpg) no-repeat center center;
+  /* background:  url(images/croissants_banner.jpg) no-repeat center center; */
   background-size: cover; 
   text-align: center;
   height: 13em;
