--- a/bakery-rwd-finished.css
+++ b/bakery-rwd-finished.css
@@ -1,3 +1,9 @@
+/* to-do-list:
+header ei täytä koko leveyttä etusivulla (???) kertokaa jos tiedätte miks
+korjaa kuva etusivulla/uus tsydeemi
+omat menulinkit puhelimelle */
+
+
 @charset "UTF-8";
 body { 
   background-image: url('Mountainpic.jpeg');
@@ -33,7 +39,8 @@ a {
 /* header styles */
 header {
   color: white;
-  background:  url(images/croissants_banner.jpg) no-repeat center center;
+  /* background:  url(images/croissants_banner.jpg) no-repeat center center; */
+  background: #262626;
   background-size: cover; 
   text-align: center;
   height: 13em;
@@ -49,10 +56,10 @@ header p {
 /* nav styles */
 nav, footer {
   font-family: verdana, sans-serif;
-  background-color: #783F27;
+  background-color: #262626;
 }
 nav ul li a:link, nav ul li a:visited {
-  color: #F9AB33;
+  color: #cccccc;
 }
 nav ul li a:focus, nav ul li a:hover, nav ul li a:active {
   color: #fff;
