--- a/bakery-rwd-finished.css
+++ b/bakery-rwd-finished.css
@@ -110,7 +110,7 @@ h3 {
   margin-top: 1.5em;
 }
 h4 { 
-font-family: georgia, serif;
+font-family: Garamond, serif;
 font-weight: normal;
 font-size: 0.75em;
 color:#b37070
