Feedback style changed
Imported webpage style on both feedback files (fi/en)

--- a/bakery-rwd-finished.css
+++ b/bakery-rwd-finished.css
@@ -149,7 +149,13 @@ nav ul li a {
   padding: .5em 1em; 	
   border-radius: .5em; 
   margin: .25em; 
-  } 	
+  } 
+ol, ul { 
+    list-style-type: none;
+  }
+ol, ul { 
+    list-style-type: none;
+}
 
 
 /* main "products" styles */
