Class "text" added
Added new class in order to change the text style of the files

--- a/bakery-rwd-finished.css
+++ b/bakery-rwd-finished.css
@@ -198,7 +198,11 @@ main img {
 }
 /*
 
-
+/* text styles (products etc.) */
+.text{
+  font-family: Georgia, serif;
+  margin-left: 50px;
+}
 
 
 /* aside "hours" styles */
