Font-size for text style
Text style font-size changed

--- a/bakery-rwd-finished.css
+++ b/bakery-rwd-finished.css
@@ -201,6 +201,7 @@ main img {
 /* text styles (products etc.) */
 .text{
   font-family: Georgia, serif;
+  font-size: 1.20em;
   margin-left: 50px;
 }
 
