--- a/bakery-rwd-finished.css
+++ b/bakery-rwd-finished.css
@@ -40,6 +40,64 @@ html {
   display:none;
 } */
 
+@media screen and (max-width: 768px) {
+  header {
+    color: white;
+    /* background:  url(images/croissants_banner.jpg) no-repeat center center; */
+    background: #262626;
+    background-size: cover; 
+    text-align: center;
+    height: 13em;
+    margin: 0;
+    font-family: monospace;
+  }
+  header h1 {
+    margin-top: 1.5em;
+  }
+  header p {
+    display: none;
+  }
+  ul {
+    list-style: none;
+  }
+  ul li {
+    display: inline-block;
+    position: relative;
+    padding: 2px;
+  }
+  ul li a {
+    display: block;
+    padding: 40px 50px;
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+  }
+  ul li ul.dropdown li {
+    display: block;
+    text-align: center;
+  }
+  ul li ul.dropdown {
+    width: 100%;
+    background: #262626;
+    position: absolute;
+    z-index: 999;
+    display: none;
+  }
+  ul li a:hover {
+    background: #262626;
+  }
+  ul li:hover ul.dropdown {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .Menu {
+    display: none;
+  }
+}
+
 /* Tabletilla logo on vähän alempana */
 @media screen and (max-width: 820px) {
   .logo {
@@ -229,6 +287,10 @@ footer {
 .linelength {
   background: yellow;
 } 
+
+.Ryhmäkuva {
+  margin-left: 50px;
+}
 
 @media screen and (min-width: 400px) {
   nav ul li {
