--- a/bakery-rwd-finished.css
+++ b/bakery-rwd-finished.css
@@ -164,6 +164,8 @@ html {
 }
 */
 
+
+
 body {
   font-family: Verdana, Arial, serif;
   font-size: 100%;
@@ -193,6 +195,9 @@ header {
 }
 header h1 {
   margin-top: 1.5em;
+  background: -webkit-linear-gradient(#c4eeff, #ffc7de);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 header p {
   display: none;
