--- a/bakery-rwd-finished.css
+++ b/bakery-rwd-finished.css
@@ -399,10 +399,10 @@ footer {
     margin-left: 50%;
   }
   footer {
-    grid-area: footer;
     position: fixed;
+    left: 0;
     bottom: 0;
-    min-width: 1920px;
+    width: 100%;
   }
   #award { 	
     position: absolute; 	
