--- a/bakery-rwd-finished.css
+++ b/bakery-rwd-finished.css
@@ -298,7 +298,7 @@ aside {
   background: url(images/scallop_top.png) repeat-x left top; 
   background-color: #F6F3ED;
   padding: 1em;
-
+  margin-bottom: 10%;
 }
 /* misc styles */
 footer {
@@ -403,6 +403,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
+    height: 10%;
   }
   #award { 	
     position: absolute; 	
